--- a/AtlasGuide_angular/AtlasGuide_angular-master/src/index.html
+++ b/AtlasGuide_angular/AtlasGuide_angular-master/src/index.html
@@ -52,7 +52,8 @@
   <script type="text/javascript">
     Stripe.setPublishableKey('pk_test_51P7Q1gRtfFTFlYORaEbGbTASa9gg8ER8qknvDXnQEVKzWEb3VQL5EFoOyaPK0a0Ydt1GsqRzWa6WxnC89V7NRZ0i00HzVk1D3U');
   </script>
-
+  <link rel='stylesheet' href='https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.css' />
+  <script src='https://unpkg.com/maplibre-gl@4.3.2/dist/maplibre-gl.js'></script>
 </head>
 <body class="mat-typography" data-theme="light">
 <app-root></app-root>
